<resources>
    <string name="app_name">Boleta Electronica</string>

    <!--fragment_solicita_folios-->
    <string name="solicitar_folios">Solicitar Folios</string>

    <!--fragment_rcof-->
    <string name="sin_registros_encontrados">Sin Registros Encontrados</string>
    <string name="total_general">Total General:</string>
    <string name="resumen">Resumen</string>
    <string name="folios_ocupados">Folios Ocupados:</string>
    <string name="hasta">Hasta</string>
    <string name="desde">Desde</string>
    <string name="total_iva">Total I.V.A:</string>
    <string name="total_neto">Total Neto:</string>
    <string name="fecha">Fecha:</string>
    <string name="buscar">Buscar</string>
    <string name="rcof">RCOF</string>

    <!--FragmentBoleta-->
    <string name="numero_folio">Numero Folio:</string>
    <string name="sin_folios_disponibles">Sin Folios Disponibles</string>
    <string name="borrar">BORRAR</string>
    <string name="imprimir">IMPRIMIR</string>
    <string name="total">Total:</string>
    <string name="agregar">AGREGAR</string>
    <string name="eliminar">ELIMINAR</string>
    <string name="estado_conexion">Estado Conexión:</string>
    <string name="conectar">Conectar</string>
    <string name="conectado">Conectado</string>
    <string name="desconectado">Desconectado</string>

    <!--ActivityListaDispositivos-->
    <string name="conectando">Conectando...</string>
    <string name="escanear">Escanear</string>
    <string name="detener">Detener</string>
    <string name="dispositivos_disponibles">Dispositivos Disponibles</string>
    <string name="buscar_dispositivos">Buscar Dispositivos</string>

    <string name="title_activity_main_nav_drawer">MainActivityNavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MicroPos</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="activar_modo_calculadora">Activar Modo Calculadora</string>
    <string name="info_comercio">Información del Comercio</string>

    <string name="menu_boleta_calculadora">Boleta Calculadora</string>
    <string name="menu_boleta">Boleta</string>
    <string name="menu_configuraciones">Configuraciones</string>
    <string name="menu_login">Sincronizar</string>

    <!--Login-->
    <string name="ingresar">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="usuario_contrasena_incorrecto">Usuario y/o Contraseña incorrecto</string>
    <string name="mantener_sesion_iniciada">Mantener sesión iniciada</string>

    <string name="lorem">Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto.
        Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500</string>

    <string-array name="array_fuente">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string-array name="array_negrita">
        <item>No</item>
        <item>Si</item>
    </string-array>

    <string-array name="array_ancho">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="array_alto">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

</resources>