<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_boleta"
            android:icon="@drawable/ic_file_24dp"
            android:title="@string/menu_boleta" />

        <item
            android:id="@+id/nav_boleta_calculadora"
            android:icon="@drawable/ic_calculator_24dp"
            android:title="@string/menu_boleta_calculadora" />

        <item
            android:id="@+id/nav_rcof"
            android:icon="@drawable/ic_clipboard_24dp"
            android:title="@string/rcof" />

    </group>

    <group android:id="@+id/group_two">
        <item android:id="@+id/nav_solicitar_folios"
            android:icon="@drawable/ic_folder_24dp"
            android:title="@string/solicitar_folios"/>
    </group>

    <group
        android:id="@+id/group_three">

        <item
            android:id="@+id/nav_conf"
            android:icon="@drawable/ic_gear_24dp"
            android:title="@string/menu_configuraciones" />

    </group>
</menu>
