<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_boleta">

    <fragment
        android:id="@+id/nav_boleta"
        android:name="com.micropos.boletaelectronica.app.fragments.FragmentBoleta"
        android:label="@string/menu_boleta"
        tools:layout="@layout/fragment_boleta" />

    <fragment
        android:id="@+id/nav_boleta_calculadora"
        android:name="com.micropos.boletaelectronica.app.fragments.FragmentBoletaCalculadora"
        android:label="@string/menu_boleta_calculadora"
        android:layout="@layout/fragment_boleta_calculadora"/>

    <fragment
        android:id="@+id/nav_rcof"
        android:name="com.micropos.boletaelectronica.app.fragments.FragmentRCOF"
        android:label="@string/rcof"
        android:layout="@layout/fragment_rcof"/>

    <fragment
        android:id="@+id/nav_solicitar_folios"
        android:name="com.micropos.boletaelectronica.app.fragments.FragmentSolicitaFolios"
        android:label="@string/solicitar_folios"
        android:layout="@layout/fragment_solicita_folios"/>

    <activity
        android:id="@+id/nav_conf"
        android:name="com.micropos.boletaelectronica.app.ActivityConfiguraciones"
        android:label="@string/menu_configuraciones"
        tools:layout="@layout/app_bar_activity_configuraciones" />

</navigation>