<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <TextView
        android:id="@+id/tv_folio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="#1234"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_valor_total"
        style="@style/BlackTextTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="right"
        android:paddingStart="@dimen/padding_et_valores_ingresados"
        android:paddingEnd="@dimen/padding_et_valores_ingresados"
        android:textSize="@dimen/text_size_valor_total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_folio" />

    <TextView
        android:id="@+id/tv_valor"
        style="@style/BlackTextTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/background_text_view"
        android:gravity="right"
        android:paddingStart="@dimen/padding_et_valores_ingresados"
        android:paddingEnd="@dimen/padding_et_valores_ingresados"
        android:textSize="@dimen/text_size_valor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_valor_total" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_valor">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_siete"
                style="@style/NumberButton"
                android:layout_weight="1"
                android:text="7" />

            <Button
                android:id="@+id/btn_ocho"
                style="@style/NumberButton"
                android:layout_weight="1"
                android:text="8" />

            <Button
                android:id="@+id/btn_nueve"
                style="@style/NumberButton"
                android:layout_weight="1"
                android:text="9" />

            <Button
                android:id="@+id/btn_agregar"
                style="@style/OperatorButton"
                android:layout_weight="1"
                android:text="OK" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_cuatro"
                style="@style/NumberButton"
                android:layout_weight="1"
                android:text="4" />

            <Button

                android:id="@+id/btn_cinco"
                style="@style/NumberButton"
                android:layout_weight="1"
                android:text="5" />

            <Button
                android:id="@+id/btn_seis"
                style="@style/NumberButton"
                android:layout_weight="1"
                android:text="6" />

            <Button
                android:id="@+id/btn_limpiar"
                style="@style/OperatorButton"
                android:layout_weight="1"
                android:text="C" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_uno"
                style="@style/NumberButton"
                android:layout_weight="1"
                android:text="1" />

            <Button
                android:id="@+id/btn_dos"
                style="@style/NumberButton"
                android:layout_weight="1"
                android:text="2" />

            <Button
                android:id="@+id/btn_tres"
                style="@style/NumberButton"
                android:layout_weight="1"
                android:text="3" />

            <Button
                android:id="@+id/btn_multiplicar"
                style="@style/OperatorButton"
                android:layout_weight="1"
                android:text="*" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_cero"
                style="@style/NumberButton"
                android:layout_weight="1"
                android:text="0" />

            <Button
                android:id="@+id/btn_imprimir"
                style="@style/OrangeButton"
                android:layout_weight="1"
                android:text="@string/imprimir" />

            <ImageButton
                android:id="@+id/btn_borrar"
                style="@style/ImageButton"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_cancel_50dp"
                android:text="" />

        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/estado_conexion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_conectar"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_button"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/background_button"
        android:paddingStart="@dimen/padding_button"
        android:paddingEnd="@dimen/padding_button"
        android:text="@string/conectar"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_estado_conexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>